Fix for horizontal scrolling

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,8 @@
 @media screen and (max-width: 541px) {
-
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
   .nav-wrapper{
     display: none;
   }
